[project]
name = "incident-response-env"
version = "1.0.0"
description = "OpenEnv incident response environment for AI agent submission."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "mohan2004143"}
]
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.1",
  "openai>=1.30.1",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
